Add User Story #2

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <header>
-  <h1 id="title">Survey Form</h1>
+	<h1 id="title">Survey Form</h1>
 </header>
+
+<main>
+	<p id="description">Let us know how we can improve freeCodeCamp</p>
+</main>
