Add User Story # 4

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <main>
 	<p id="description">Let us know how we can improve freeCodeCamp</p>
 
-	<form id="survey-form"></form>
+	<form id="survey-form">
 
+		<label>* Name : 
+			<input id="name" type="text" required>
+		</label>
+
+	</form>
 </main>
