Add User Story # 5 and User Story # 6

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 			<input id="name" type="text" required>
 		</label>
 
+		<label for="email">* Email : 
+			<input type="email" id="email" required>
+		</label>
+
 	</form>
 </main>
