Add User Story # 7 and User Story # 8

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 			<input type="email" id="email" required>
 		</label>
 
+		<label for="age">* Age : 
+			<input id="number" name="age" type="number" required>
+		</label>
+
 	</form>
 </main>
