Add User Story # 9

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</label>
 
 		<label for="age">* Age : 
-			<input id="number" name="age" type="number" required>
+			<input id="number" name="age" type="number" min="18" max="110" required>
 		</label>
 
 	</form>
