Add User Story # 10

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 	<form id="survey-form">
 
-		<label>* Name : 
+		<label id="name-label">* Name : 
 			<input id="name" type="text" required>
 		</label>
 
-		<label for="email">* Email : 
+		<label id="email-label" for="email">* Email : 
 			<input type="email" id="email" required>
 		</label>
 
-		<label for="age">* Age : 
+		<label id="number-label" for="age">* Age : 
 			<input id="number" name="age" type="number" min="18" max="110" required>
 		</label>
 
