--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	<form id="survey-form">
 
 		<label id="name-label">* Name : 
-			<input id="name" type="text" required>
+			<input id="name" type="text" placeholder="Enter your name" required>
 		</label>
 
 		<label id="email-label" for="email">* Email : 
-			<input type="email" id="email" required>
+			<input type="email" id="email" placeholder="Enter your email" required>
 		</label>
 
 		<label id="number-label" for="age">* Age : 
-			<input id="number" name="age" type="number" min="18" max="110" required>
+			<input id="number" name="age" type="number" placeholder="Age" min="18" max="110" required>
 		</label>
 
 	</form>
