Add User Story # 12

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 		<label id="name-label">* Name : 
 			<input id="name" type="text" placeholder="Enter your name" required>
 		</label>
-
 		<label id="email-label" for="email">* Email : 
 			<input type="email" id="email" placeholder="Enter your email" required>
 		</label>
-
 		<label id="number-label" for="age">* Age : 
 			<input id="number" name="age" type="number" placeholder="Age" min="18" max="110" required>
+		</label>
+
+		<label for="dropdown">Which option best describes your current role?
+			<select id="dropdown">
+				<option value="">Select an option</option>
+				<option value"Student">Student</option>
+				<option value="Full Time Job">Full Time Job</option>
+				<option value="Full Time Learner">Full Time Learner</option>
+				<option value="Prefer not to say">Prefer not to say</option>
+				<option value="Other">Other</option>
+			</select>
 		</label>
 
 	</form>
