Add User Story # 14

--- a/index.html
+++ b/index.html
@@ -34,5 +34,15 @@
 			<input type="radio" name="recommend" required> Not sure
 		</label>
 
+		<label for="what">What do you like most in FCC :
+			<select id="what">
+				<option value="">Select an option</option>
+				<option value"Student">Challenges</option>
+				<option value="Full Time Job">Projects</option>
+				<option value="Full Time Learner">Community</option>
+				<option value="Prefer not to say">Open Source</option>
+			</select>
+		</label>
+
 	</form>
 </main>
