--- a/index.html
+++ b/index.html
@@ -44,5 +44,41 @@
 			</select>
 		</label>
 
+		<label>Things that should be improved in the future (Check all that apply):
+			<label for="front-end">
+				<input type="checkbox" name="apply" id="front-end"> Front-end Projects
+			</label>
+			<label for="back-end">
+				<input type="checkbox" name="apply" id="back-end"> Back-end Projects
+			</label>
+			<label for="data-visu">
+				<input type="checkbox" name="apply" id="data-visu"> Data Visualization
+			</label>
+			<label for="challenges">
+				<input type="checkbox" name="apply" id="challenges"> Challenges
+			</label>
+			<label for="open-source">
+				<input type="checkbox" name="apply" id="open-source"> Open Source Community
+			</label>  
+			<label for="gitter-help">
+				<input type="checkbox" name="apply" id="gitter-help"> Gitter help rooms
+			</label>
+			<label for="videos">
+				<input type="checkbox" name="apply" id="videos"> Videos
+			</label>  
+			<label for="city-meetups">
+				<input type="checkbox" name="apply" id="city-meetups"> City Meetups
+			</label>  
+			<label for="wiki">
+				<input type="checkbox" name="apply" id="wiki"> Wiki
+			</label>  
+			<label for="forum">
+				<input type="checkbox" name="apply" id="forum"> Forum
+			</label>  
+			<label for="add-courses">
+				<input type="checkbox" name="apply" id="add-courses"> Additional Courses
+			</label>
+		</label>
+
 	</form>
 </main>
