Add User Story # 15

--- a/index.html
+++ b/index.html
@@ -80,5 +80,8 @@
 			</label>
 		</label>
 
+		<label for="message">Any Comments or Suggestions?</label>
+		<textarea id="message" name="message" placeholder="Enter your comment here..." rows="5" cols="33"></textarea>
+
 	</form>
 </main>
