Add User Story # 16

--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
 		<label for="message">Any Comments or Suggestions?</label>
 		<textarea id="message" name="message" placeholder="Enter your comment here..." rows="5" cols="33"></textarea>
 
+		<button id="submit" type="submit">Submit</button>
 	</form>
 </main>
