Place #name-label and #name in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 	<p id="description">Let us know how we can improve freeCodeCamp</p>
 
 	<form id="survey-form">
+		<div class="rowTab"> 
+			<div class="labels">
+				<label id="name-label">* Name : </label>
+			</div>
+			<div class="right-tab">
+				<input class="input-field" id="name" type="text" placeholder="Enter your name" required>
+			</div>
+		</div>
 
-		<label id="name-label">* Name : 
-			<input id="name" type="text" placeholder="Enter your name" required>
-		</label>
 		<label id="email-label" for="email">* Email : 
 			<input type="email" id="email" placeholder="Enter your email" required>
 		</label>
