Place #email-label and #email in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 			</div>
 		</div>
 
-		<label id="email-label" for="email">* Email : 
-			<input type="email" id="email" placeholder="Enter your email" required>
-		</label>
+		<div class="rowTab"> 
+			<div class="labels">
+				<label id="email-label" for="email">* Email : </label>
+			</div>
+			<div class="right-tab">
+				<input class="input-field" type="email" id="email" placeholder="Enter your email" required>
+			</div>
+		</div>
+
 		<label id="number-label" for="age">* Age : 
 			<input id="number" name="age" type="number" placeholder="Age" min="18" max="110" required>
 		</label>
