--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 			</div>
 		</div>
 
-		<label id="number-label" for="age">* Age : 
-			<input id="number" name="age" type="number" placeholder="Age" min="18" max="110" required>
-		</label>
+		<div class="rowTab">
+			<div class="labels">
+				<label id="number-label" for="age">* Age : </label>
+			</div>
+			<div class="right-tab">
+				<input class="input-field" id="number" name="age" type="number" placeholder="Age" min="18" max="110" required>
+			</div>
+		</div>
 
 		<label for="dropdown">Which option best describes your current role?
 			<select id="dropdown">
