--- a/index.html
+++ b/index.html
@@ -33,16 +33,21 @@
 			</div>
 		</div>
 
-		<label for="dropdown">Which option best describes your current role?
-			<select id="dropdown">
-				<option value="">Select an option</option>
-				<option value"Student">Student</option>
-				<option value="Full Time Job">Full Time Job</option>
-				<option value="Full Time Learner">Full Time Learner</option>
-				<option value="Prefer not to say">Prefer not to say</option>
-				<option value="Other">Other</option>
-			</select>
-		</label>
+		<div class="rowTab">
+			<div class="labels">
+				<label for="dropdown">Which option best describes your current role? </label>
+			</div>
+			<div class="right-tab">
+				<select id="dropdown">
+					<option value="">Select an option</option>
+					<option value"Student">Student</option>
+					<option value="Full Time Job">Full Time Job</option>
+					<option value="Full Time Learner">Full Time Learner</option>
+					<option value="Prefer not to say">Prefer not to say</option>
+					<option value="Other">Other</option>
+				</select>
+			</div>
+		</div>
 
 		<label>* How likely is that you would recommend freeCodeCamp to a friend?
 			<input type="radio" name="recommend" required> Definitely
