Place #recommend-label and #recommend in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@
 			</div>
 		</div>
 
-		<label>* How likely is that you would recommend freeCodeCamp to a friend?
-			<input type="radio" name="recommend" required> Definitely
-			<input type="radio" name="recommend" required> Maybe
-			<input type="radio" name="recommend" required> Not sure
-		</label>
+		<div class="rowTab">
+			<div class="labels">
+				<label id="recommend-label">* How likely is that you would recommend freeCodeCamp to a friend?</label>
+			</div>
+			<div class="right-tab">
+				<ul>
+					<li class="radio"> <input type="radio" name="recommend" required> Definitely</li>
+					<li class="radio"> <input type="radio" name="recommend" required> Maybe</li>
+					<li> <input type="radio" name="recommend" required> Not sure</li>     
+				</ul>
+			</div>
+		</div>
 
 		<label for="what">What do you like most in FCC :
 			<select id="what">
