Place #dropdown in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -62,15 +62,20 @@
 			</div>
 		</div>
 
-		<label for="what">What do you like most in FCC :
-			<select id="what">
-				<option value="">Select an option</option>
-				<option value"Student">Challenges</option>
-				<option value="Full Time Job">Projects</option>
-				<option value="Full Time Learner">Community</option>
-				<option value="Prefer not to say">Open Source</option>
-			</select>
-		</label>
+		<div class="rowTab">
+			<div class="labels">
+				<label for="what">What do you like most in FCC :</label>
+			</div>
+			<div class="right-tab">
+				<select id="dropdown">
+					<option value="">Select an option</option>
+					<option value"Student">Challenges</option>
+					<option value="Full Time Job">Projects</option>
+					<option value="Full Time Learner">Community</option>
+					<option value="Prefer not to say">Open Source</option>
+				</select>
+			</div>
+		</div>
 
 		<label>Things that should be improved in the future (Check all that apply):
 			<label for="front-end">
