Place .checkbox in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -77,41 +77,70 @@
 			</div>
 		</div>
 
-		<label>Things that should be improved in the future (Check all that apply):
-			<label for="front-end">
-				<input type="checkbox" name="apply" id="front-end"> Front-end Projects
-			</label>
-			<label for="back-end">
-				<input type="checkbox" name="apply" id="back-end"> Back-end Projects
-			</label>
-			<label for="data-visu">
-				<input type="checkbox" name="apply" id="data-visu"> Data Visualization
-			</label>
-			<label for="challenges">
-				<input type="checkbox" name="apply" id="challenges"> Challenges
-			</label>
-			<label for="open-source">
-				<input type="checkbox" name="apply" id="open-source"> Open Source Community
-			</label>  
-			<label for="gitter-help">
-				<input type="checkbox" name="apply" id="gitter-help"> Gitter help rooms
-			</label>
-			<label for="videos">
-				<input type="checkbox" name="apply" id="videos"> Videos
-			</label>  
-			<label for="city-meetups">
-				<input type="checkbox" name="apply" id="city-meetups"> City Meetups
-			</label>  
-			<label for="wiki">
-				<input type="checkbox" name="apply" id="wiki"> Wiki
-			</label>  
-			<label for="forum">
-				<input type="checkbox" name="apply" id="forum"> Forum
-			</label>  
-			<label for="add-courses">
-				<input type="checkbox" name="apply" id="add-courses"> Additional Courses
-			</label>
-		</label>
+		<div class="rowTab">
+			<div class="labels">
+				<label>Things that should be improved in the future (Check all that apply):</label>
+			</div>
+			<div class="right-tab">
+				<ul>
+					<li class="checkbox">
+						<label for="front-end">
+							<input type="checkbox" name="apply" id="front-end"> Front-end Projects
+						</label>
+					</li>
+					<li class="checkbox">
+						<label for="back-end">
+							<input type="checkbox" name="apply" id="back-end"> Back-end Projects
+						</label>  
+					</li>
+					<li class="checkbox">
+						<label for="data-visu">                      
+							<input type="checkbox" name="apply" id="data-visu"> Data Visualization
+						</label>
+					</li>  
+					<li class="checkbox">
+						<label for="challenges">
+							<input type="checkbox" name="apply" id="challenges"> Challenges
+						</label>
+					</li>
+					<li class="checkbox">	
+						<label for="open-source">
+							<input type="checkbox" name="apply" id="open-source"> Open Source Community
+						</label>  
+					</li>
+					<li class="checkbox">
+						<label for="gitter-help">
+							<input type="checkbox" name="apply" id="gitter-help"> Gitter help rooms
+						</label>
+					</li>                 
+					<li class="checkbox">
+						<label for="videos">
+							<input type="checkbox" name="apply" id="videos"> Videos
+						</label>   
+					</li>
+					<li class="checkbox">	
+						<label for="city-meetups">
+							<input type="checkbox" name="apply" id="city-meetups"> City Meetups
+						</label>  
+					</li>
+					<li class="checkbox">	
+						<label for="wiki">
+							<input type="checkbox" name="apply" id="wiki"> Wiki
+						</label>  
+					</li>
+					<li class="checkbox">	
+						<label for="forum">
+							<input type="checkbox" name="apply" id="forum"> Forum
+						</label> 
+					</li>
+					<li class="checkbox">
+						<label for="add-courses">
+							<input type="checkbox" name="apply" id="add-courses"> Additional Courses
+						</label>
+					</li>   
+				</ul>
+			</div>
+		</div>
 
 		<label for="message">Any Comments or Suggestions?</label>
 		<textarea id="message" name="message" placeholder="Enter your comment here..." rows="5" cols="33"></textarea>
