Place #message in div .rowTab, .labels and .right-tab

--- a/index.html
+++ b/index.html
@@ -142,8 +142,14 @@
 			</div>
 		</div>
 
-		<label for="message">Any Comments or Suggestions?</label>
-		<textarea id="message" name="message" placeholder="Enter your comment here..." rows="5" cols="33"></textarea>
+		<div class="rowTab">
+			<div class="labels">
+				<label for="message">Any Comments or Suggestions?</label>
+			</div>
+			<div class="right-tab">
+				<textarea class="message" name="message" placeholder="Enter your comment here..." rows="5" cols="33"></textarea>
+			</div>  
+		</div>
 
 		<button id="submit" type="submit">Submit</button>
 	</form>
